# SystolicSim

./: Buffer.h  CMakeLists.txt  Config.h  Makefile  MemoryInterface.cpp  MemoryInterface.h  PE.h  README.md  Scheduler.cpp  Scheduler.h  Stats.h  SystolicArray.h  Top.h  sc_main.cpp  systolic_sc  systolic_sc_asan
config/: PE16x32.yaml  base.yaml  ddr3_config.yaml
config/DDR_config/: ddr3_config.yaml
src/: Config.h  Makefile  main.cpp  systolic_sim  test_ram.cpp  test_ramulator.cpp  wave.vcd
src/core/: PE16bit.h
src/memory/: MemoryInterface.h  buffer.h  ramulator_wrapper.h
src/systolic_array/: systolicArray_ws.h
